third_party/move/move-compiler-v2/tests/checking/typing/conditional_global_operations.exp

Diagnostics:
error: type `Box<R>` does not have expected ability `key`
   ┌─ tests/checking/typing/conditional_global_operations.move:15:20
   │
15 │         move_to(s, Box<R> { f: R {} });
   │                    ^^^^^^^^^^^^^^^^^^

error: type `Box<T>` does not have expected ability `key`
   ┌─ tests/checking/typing/conditional_global_operations.move:16:9
   │
16 │         borrow_global<Box<T>>(a1);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^

error: type `Box<Box<T>>` does not have expected ability `key`
   ┌─ tests/checking/typing/conditional_global_operations.move:17:9
   │
17 │         borrow_global_mut<Box<Box<T>>>(a1);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: type `Pair<S, R>` does not have expected ability `key`
   ┌─ tests/checking/typing/conditional_global_operations.move:18:33
   │
18 │         Pair { f1: _, f2: _ } = move_from<Pair<S, R>>(a1);
   │                                 ^^^^^^^^^^^^^^^^^^^^^^^^^

error: type `Pair<Box<T>, S>` does not have expected ability `key`
   ┌─ tests/checking/typing/conditional_global_operations.move:19:9
   │
19 │         exists<Pair<Box<T>, S>>(a1);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: type `Box<K>` does not have expected ability `key`
   ┌─ tests/checking/typing/conditional_global_operations.move:21:9
   │
21 │         borrow_global<Box<K>>(a1);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^

error: type `Pair<S, K>` does not have expected ability `key`
   ┌─ tests/checking/typing/conditional_global_operations.move:22:9
   │
22 │         borrow_global_mut<Pair<S, K>>(a1);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
